renamed text-right to text-right-cart on style.css and cart.ejs to fix nav error on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -276,7 +276,7 @@ body {
         display: block;
     }
 
-    .text-right{
+    .text-right-cart {
         float: left;
     }
 
